# grola

./: .gitignore  Makefile  README.md  config-pages.toml  config-server.toml  config.toml
data/: blog-posts.toml
rust/: Cargo.toml  build.rs
rust/src/: config.rs  dynamic_server.rs  lib.rs  main.rs  make_parsers.rs  parsers.rs  routes.rs
templates/: blog-posts.html  blog.html  site-foot.html  site-head.html
