[package]
name = "grola"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.5", features = ["query"], optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
tinytemplate = { version = "1.2.1", optional = true }
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread"], optional = true }
toml = { version = "0.8.14", optional = true }

[build-dependencies]
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }

[features]
make-parsers = []
dynamic-server = ["dep:serde", "dep:tinytemplate", "dep:toml", "dep:tokio", "dep:axum", "dep:tower-http"]
static-render = ["dep:serde", "dep:tinytemplate", "dep:toml"]

[[bin]]
name = "make-parsers"
required-features = ["make-parsers"]

[[bin]]
name = "dynamic-server"
required-features = ["dynamic-server"]

[[bin]]
name = "static-render"
required-features = ["static-render"]
